# VI51-Project

./: CMakeLists.txt  ClassDiagram.mdj  README.md
res/: learn.txt
res/maps/: 10_Easy2.xml  10_Easy3.xml  10_Easy4.xml  10_Easy5.xml  10_Hard1.xml  10_Hard2.xml  10_Hard3.xml  10_Hardcore1.xml  10_Medium1.xml  10_Medium2.xml  10_Medium3.xml  10_Medium4.xml  10_Medium5.xml  10_Medium6.xml  15_Easy1.xml  15_Easy2.xml  15_Hard1.xml  15_Hard2.xml  15_Hard3.xml  15_Hard4.xml  15_Hardcore1.xml  15_Medium2.xml  15_Medium4.xml  15_Medium5.xml  15_Medium6.xml  15_Medium7.xml  15_Medium8.xml  20_Easy1.xml  20_Easy2.xml  20_Easy3.xml  20_Hard1.xml  20_Hard2.xml  20_Hard3.xml  20_Medium1.xml  20_Medium2.xml  20_Medium3.xml  Islands.xml  LearningPath.xml
res/scriptResults/: Test_nu_15Hard4.xml
src/: Agent.cpp  Agent.h  AgentLemmingDummy.cpp  AgentLemmingDummy.h  AgentLemmingTest.cpp  AgentLemmingTest.h  AgentQLearning.cpp  AgentQLearning.h  B_Lemming.cpp  B_Lemming.h  BasicAgent.cpp  BasicAgent.h  Body.cpp  Body.h  BodyLemming.cpp  BodyLemming.h  BodyLemmingMemory.cpp  BodyLemmingMemory.h  Cell.cpp  Cell.h  Circle.h  Cross.cpp  Cross.h  Event.cpp  Event.h  Frustrum.cpp  Frustrum.h  GraphicView.cpp  GraphicView.h  HelperFunctions.cpp  HelperFunctions.h  LearningManager.cpp  LearningManager.h  LearningMethod.cpp  LearningMethod.h  LearningMethodRNA.cpp  LearningMethodRNA.h  Map.cpp  Map.h  MapGenerator.cpp  (+42 more)
src/NeuronalNetwork/: MathUtils.cpp  MathUtils.h  NeuronalNetworkMonocouche.cpp  NeuronalNetworkMonocouche.h  Neurone.cpp  Neurone.h  Parser.cpp  Parser.h  Sample.cpp  Sample.h
