CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Projet_VI51)

SET(EXE_NAME "Projet_VI51")

SET(EXECUTABLE_OUTPUT bin/${CMAKE_BUILD_TYPE})

FILE (GLOB_RECURSE sourceFiles src/*)

ADD_EXECUTABLE(${EXE_NAME} ${sourceFiles})

FIND_FILE(SFML_CMAKE_DIR "cmake/Modules/FindSFML.cmake")
if(SFML_CMAKE_DIR)
	string(REPLACE "FindSFML.cmake" "" SFML_CMAKE_DIR ${SFML_CMAKE_DIR})
	set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${SFML_CMAKE_DIR}")
endif()
FIND_PACKAGE(SFML COMPONENTS system window graphics audio REQUIRED)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${SFML_LIBRARIES})

FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
LINK_LIBRARIES(${GLEW_LIBRARY})
ADD_DEFINITIONS(${GLEW_DEFINITIONS})
if(GLEW_FOUND)
	TARGET_LINK_LIBRARIES(${EXE_NAME} ${GLEW_LIBRARY})
endif()

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
if(OPENGL_FOUND)
	TARGET_LINK_LIBRARIES(${EXE_NAME} ${OPENGL_LIBRARIES})
endif()

FIND_FILE(GLM_CMAKE_DIR "util/FindGLM.cmake")
if(GLM_CMAKE_DIR)
	string(REPLACE "FindGLM.cmake" "" GLM_CMAKE_DIR ${GLM_CMAKE_DIR})
	set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${GLM_CMAKE_DIR}")
endif()
FIND_PACKAGE(GLM REQUIRED)
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
LINK_DIRECTORIES(${GLM_LIBRARY_DIRS})
ADD_DEFINITIONS(${GLM_DEFINITIONS})

if(GLM_FOUND)
	TARGET_LINK_LIBRARIES(${EXE_NAME} ${GLM_LIBRARY})
endif()
